--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -16,14 +16,14 @@
               </figure>
             </div>
             <div class="media-content">
-              <p class="title is-4">John Smith</p>
-              <p class="subtitle is-6">@{{ article.handle }}</p>
+              <p class="title is-4">{{ article.name }}</p>
+              <!-- <p class="subtitle is-6">{{ article.uid }}</p> -->
+              {{ article.date }}
             </div>
           </div>
       
           <div class="content">{{ article.title}}
             <br>
-            <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
           </div>
         </div>
       </a>
