profile section is cleared

--- a/src/app/components/downloads/downloads.component.html
+++ b/src/app/components/downloads/downloads.component.html
@@ -1,3 +1,41 @@
-<p>
-  downloads works!
-</p>
+<br><br>
+<div class="container">
+  <table class="table is-fullwidth is-bordered is-striped">
+    <thead>
+      <tr class="has-background-primary">
+        <th>Pos</th>
+        <th>Team</th>
+        <th>Pld</th>
+        <th>Pos</th>
+        <th>Team</th>
+        <th>Pld</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>val1</td>
+        <td>val2</td>
+        <td>val3</td>
+        <td>val4</td>
+        <td>val5</td>
+        <td>val6</td>
+      </tr>
+      <tr>
+        <td>val1</td>
+        <td>val2</td>
+        <td>val3</td>
+        <td>val4</td>
+        <td>val5</td>
+        <td>val6</td>
+      </tr>
+      <tr>
+        <td>val1</td>
+        <td>val2</td>
+        <td>val3</td>
+        <td>val4</td>
+        <td>val5</td>
+        <td>val6</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
