--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,16 +13,15 @@
 
   <div id="navMenu" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" routerLink = "/blogs">
-        Experience
-      </a>
       <!-- <li class="nav-item">
         <a routerLink="/blogs" class="nav-link">Blogs</a>
       </li> -->
       <a class="navbar-item" routerLink = "/article">
         Article
       </a>
-
+      <a class="navbar-item" routerLink = "/blogs">
+        Recent Questions
+      </a>
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           More
@@ -31,6 +30,9 @@
         <div class="navbar-dropdown">
           <a class="navbar-item" routerLink = "/writearticle">
             Write article
+          </a>
+          <a class="navbar-item" routerLink = "/writeqna">
+            Ask a question
           </a>
           <a class="navbar-item" routerLink = "/download">
             Download
