--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
 <div class="box is-paddingless">
   <br>  
   <div class="columns">
-    <div class="column is-3 has-background-light">
+    <div class="column is-4">
       <br>
       <figure class="image" style="margin-left:16%">
         <img class="is-rounded" src="{{ pro.img }}" style="width: 210px; height: 210px;">
@@ -40,7 +40,7 @@
         </ul>
       </aside>
     </div>
-    <div class="column has-background-light">
+    <div class="column">
       <div class="container" style="padding-left: 100px;">
         <router-outlet></router-outlet>
       </div>
