--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,8 +1,9 @@
 footer {
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:300px;
+   position: relative;
+   left:0;
+   bottom:0;
+   height:100px;
    width:100%;
-   background:#007bff!important;
+   background:#418cdd!important;
+   margin-top:100px;
 }
