--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,21 @@
-<p>
-  homepage works!
-</p>
+<br>
+<div class="field has-addons">
+  <div class="container">
+    <input class="input" type="text" placeholder="Find a repository">
+  </div>
+  <div class="control">
+    <a class="button is-info">
+      Search
+    </a>
+  </div>
+</div>
+<br>
+<br>
+<div class="container has-background-light" style="height: 300px;">
+</div>
+<br><br>
+<div class="container has-background-light" style="height: 300px;">
+</div>
+<br><br>
+<br>
+
