--- a/src/app/components/write/write.component.html
+++ b/src/app/components/write/write.component.html
@@ -1,3 +1,39 @@
-<p>
-  write works!
-</p>
+<br><br>
+<div class="box">
+  <div class="card-body">
+    <form #articleForm = "ngForm" (ngSubmit) = "onSubmit(articleForm)">
+      <div class="field">
+        <label for="title" class="label">Title</label>
+        <input 
+        type="text" 
+        class="input"
+        name="title"
+        #articleTitle = "ngModel"
+        [(ngModel)] = "article.title"
+        >
+      </div>
+      <br>
+      <label for="category" class="label">Category</label>
+      <div class="select">
+        <select name="" id="">
+          <option value="placement">placement</option>
+          <option value="exam">Exam</option>
+        </select>
+      </div>
+      <br>
+      <br>
+      <div class="field">
+        <label for="detail" class="label">Description</label>
+        <quill-editor
+        name="content"
+        #articleDesc = "ngModel"
+        [(ngModel)] = "article.content"
+        [modules]="editorOptions"
+        [style] = "{minHeight: '250px'}"
+        ></quill-editor>
+      </div>
+      <br>
+      <input type="submit" value="Ask" class="button is-dark">
+    </form>
+  </div>
+</div>
