--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -1,7 +1,7 @@
 <div class="columns is-multiline">
   <div class="column is-4" *ngFor="let article of articles">
     <br><br>
-      <div class="card">
+      <div class="card" style="margin:15px;">
       <a routerLink="/article/{{ article.id }}/">
         <div class="card-image">
           <figure class="image is-4by3">
