--- a/src/app/components/personal/personal.component.html
+++ b/src/app/components/personal/personal.component.html
@@ -2,7 +2,7 @@
 <br>
 <h1 class="title is-size-3">Personal Information</h1>
 <hr>  
-<form  #profileForm = "ngForm" (ngSubmit) = "onSubmit(profileForm)" style="width: 500px;">
+<form  #profileForm = "ngForm" (ngSubmit) = "onSubmit(profileForm)" >
   <label 
   for="firstName" class="label">First Name
   </label>
