--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -40,8 +40,8 @@
         </ul>
       </aside>
     </div>
-    <div class="column">
-      <div class="container" style="padding-left: 100px;">
+    <div class="column auto">
+      <div class="container">
         <router-outlet></router-outlet>
       </div>
     </div>
