--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,88 +1,29 @@
 <br><br>
-<div class="container" style="height: 150px; border: .5px solid #c3c3c3 ">
-     <div class="container" style="height: 100px; ">
-          <h1 style="padding:10px">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta debitis ut molestiae illo molestias nam ipsum ullam aperiam minima! Voluptas consequuntur suscipit repudiandae ratione ipsam delectus harum voluptatum impedit ullam!</h1>
-     </div>
-     <div class="container" style="height: 50px; border:.5px solid #c3c3c3">
-          <div class="columns has-text-centered" style="padding-top:10px;">
-            <div class="column is-8 has-text-left" style="margin-left:15px">
-              First column
-            </div>
-            <div class="column">
-              comment
-            </div>
-            <div class="column">
-              date
-            </div>
-            <div class="column">
-              user
-            </div>
-          </div>
-     </div>
-</div>
-<br><br>
-<div class="container" style="height: 150px; border: .5px solid #c3c3c3 ">
-     <div class="container" style="height: 100px; ">
-          <h1 style="padding:10px">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta debitis ut molestiae illo molestias nam ipsum ullam aperiam minima! Voluptas consequuntur suscipit repudiandae ratione ipsam delectus harum voluptatum impedit ullam!</h1>
-     </div>
-     <div class="container" style="height: 50px; border:.5px solid #c3c3c3">
-          <div class="columns has-text-centered" style="padding-top:10px;">
-            <div class="column is-8 has-text-left" style="margin-left:15px">
-              First column
-            </div>
-            <div class="column">
-              comment
-            </div>
-            <div class="column">
-              date
-            </div>
-            <div class="column">
-              user
-            </div>
-          </div>
-     </div>
-</div>
-<br><br>
-<div class="container" style="height: 150px; border: .5px solid #c3c3c3 ">
-     <div class="container" style="height: 100px; ">
-          <h1 style="padding:10px">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta debitis ut molestiae illo molestias nam ipsum ullam aperiam minima! Voluptas consequuntur suscipit repudiandae ratione ipsam delectus harum voluptatum impedit ullam!</h1>
-     </div>
-     <div class="container" style="height: 50px; border:.5px solid #c3c3c3">
-          <div class="columns has-text-centered" style="padding-top:10px;">
-            <div class="column is-8 has-text-left" style="margin-left:15px">
-              First column
-            </div>
-            <div class="column">
-              comment
-            </div>
-            <div class="column">
-              date
-            </div>
-            <div class="column">
-              user
-            </div>
-          </div>
-     </div>
-</div>
-<br><br>
-<div class="container" style="height: 150px; border: .5px solid #c3c3c3 ">
-     <div class="container" style="height: 100px; ">
-          <h1 style="padding:10px">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta debitis ut molestiae illo molestias nam ipsum ullam aperiam minima! Voluptas consequuntur suscipit repudiandae ratione ipsam delectus harum voluptatum impedit ullam!</h1>
-     </div>
-     <div class="container" style="height: 50px; border:.5px solid #c3c3c3">
-          <div class="columns has-text-centered" style="padding-top:10px;">
-            <div class="column is-8 has-text-left" style="margin-left:15px">
-              First column
-            </div>
-            <div class="column">
-              comment
-            </div>
-            <div class="column">
-              date
-            </div>
-            <div class="column">
-              user
-            </div>
-          </div>
-     </div>
+<div class="container" *ngFor = "let que of question">
+    <!-- <div class="container" > -->
+      <!-- <div class="container">
+        this 
+      </div>
+      <div class="container">
+          <h1 style="padding:10px 0px 0px 10px; margin:0px" class="title is-4">{{ que.title }}</h1>
+          <h1 style="padding:10px 0px 0px 10px; max-height: 200px; overflow:hidden;" [innerHtml] = "que.content"></h1>
+      </div> -->
+      <div class="content">
+        <div class="left-content">
+        <i class="fa fa-arrow-up"></i>
+        </div>
+        <div class="right-content"> 
+          <h1 class="title is-3" style="margin: 0px">
+            {{ que.title }}
+          </h1>
+          <br>
+          <p [innerHtml] = "que.content">
+          </p>
+          <br>
+          <a routerLink = "/blogs/{{ que.id }}/">read more</a>
+        </div>
+      </div>
+      <br>
+      
+  <!-- </div> -->
 </div>
