--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,6 +4,6 @@ footer {
    bottom:0;
    height:100px;
    width:100%;
-   background:#418cdd!important;
-   margin-top:100px;
+   background:#000!important;
+   margin-top:50px;
 }
