--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="field has-addons">
+<!-- <div class="field has-addons">
   <div class="container">
     <input class="input" type="text" placeholder="Find a repository">
   </div>
@@ -8,13 +8,13 @@
       Search
     </a>
   </div>
-</div>
+</div> -->
 <br>
 <br>
-<div class="container has-background-light" style="height: 300px;">
+<div class="container" style="height: 300px; background: #4a4b4b; max-width: 90%;">
 </div>
 <br><br>
-<div class="container has-background-light" style="height: 300px;">
+<div class="container" style="height: 300px; background: #4a4b4b; max-width: 90%;">
 </div>
 <br><br>
 <br>
