--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
         <input type="submit" class="button is-info is-outlined is-fullwidth">
       </div>
       <div class="column">
-        <div class="button is-fullwidth is-outlined is-danger"><span class="icon" style="padding-right:20px"><i class="fa fa-google"></i></span>Login with google</div>
+        <div class="button is-fullwidth is-outlined is-danger" (click)="clk()"><span class="icon" style="padding-right:20px"><i class="fa fa-google"></i></span>Login with google</div>
       </div>
     </div>
     <br><br>
