--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,36 @@
 <footer class="footer">
-     
+     <div class="columns has-text-centered">
+       <div class="column">
+          <h1 class="title is-3">About Us</h1>
+          <br>
+          <p class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores mollitia libero eveniet ipsam earum magni possimus eaque quisquam numquam natus?</p>
+     </div>
+       <div class="column">
+          <h1 class="title is-3">Contact Us</h1>
+          <br>
+          <p class="subtitle" style="margin-bottom: 5px;">Email: headstart.mact@gmail.com</p>
+          <p class="subtitle">Contact Us: +917000018203</p>
+       </div>
+       <div class="column">
+          <h1 class="title is-3">Information</h1>
+          <ul>
+               <li><a routerLink ="/article">Articles</a></li>
+               <li><a routerLink ="/blogs">Qna</a></li>
+               <li><a routerLink ="/download">Download</a></li>
+          </ul>
+          <br>
+       </div>
+     </div>
+     <hr>
+     <div class="columns">
+       <div class="column">
+          <i class="fa fa-facebook-f"></i>
+          <i class="fa fa-linkedin"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-instagram"></i>
+       </div>
+       <div class="column">
+          <p class="title is-5 has-text-right" style="padding-top: 30px;">2020 &copy;headstart All Rights Reserved</p>
+       </div>
+     </div>
 </footer>
