--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -1,3 +1,19 @@
+<br><br><br>
 <div class="container">
-  
+     <div class="columns">
+       <div class="column">
+          <br><br>
+          <h1 class="title">About Us</h1>
+          <br>
+          <p class="subtitle is-6">
+               Students of our college do not have a wide exposure in terms of career domains of what they can think for and can have a bright career there. Working on live projects can open up their ideology for new career options.
+               ‌Current curriculum of engineering is not industry supportive. Projects are the best way to test their knowledge in terms of practical hands on things. We will provide industrial exposure and career guidance in following domains-Software development and IT sector Finance Data science and data analytics Core engineering field This will not only help the students to build a good resume but also clear all the doubts and queries related to real corporate life problems. This initiative will not tamper with the regular curriculum and allow the students to manage both the work simultaneously.
+          </p>
+       </div>
+       <div class="column">
+            <br><br><br>
+          <img src="../../../assets/bg.jpg" alt="">
+       </div>
+     </div>
+     <br><br><br>
 </div>
